--- a/package.json
+++ b/package.json
@@ -7,27 +7,27 @@
   "types": "./lib/esm/src/index.d.ts",
   "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
     "@open-wc/building-rollup": "^1.10.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
+    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "node-sass": "^5.0.0",
     "copyfiles": "^2.4.1",
     "deepmerge": "^4.2.2",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-scss": "3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -76,7 +76,8 @@
     "@storybook/addon-links": "^6.3.7",
     "@storybook/node-logger": "^6.3.7",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.7"
+    "@storybook/react": "^6.3.7",
+    "postcss": "^8.3.6"
   },
   "files": [
     "/dist",
