--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,7 @@
     "rootDir": "./",
     "module": "esnext",
     "target": "es5",
-    "lib": [
-      "es6",
-      "dom",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "jsx": "react",
     "declaration": true,
     "moduleResolution": "node",
@@ -20,16 +15,11 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "noEmitOnError": true, ///look into it
-    "strict": true,
+    "strict": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "lib"
-  ],
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "lib"]
 }
