--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@storybook/node-logger": "^6.3.7",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
+    "classnames": "^2.3.1",
     "postcss": "^8.3.6"
   },
   "files": [
