--- a/package.json
+++ b/package.json
@@ -77,8 +77,12 @@
     "@storybook/node-logger": "^6.3.7",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
+    "@types/randomcolor": "^0.5.6",
+    "@types/styled-components": "^5.1.12",
     "classnames": "^2.3.1",
-    "postcss": "^8.3.6"
+    "postcss": "^8.3.6",
+    "randomcolor": "^0.6.2",
+    "styled-components": "^5.3.0"
   },
   "files": [
     "/dist",
