--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "./lib/esm/src/index.d.ts",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
     "@open-wc/building-rollup": "^1.10.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,6 +16,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-addons-css-transition-group": "^15.0.6",
     "@types/react-dom": "^17.0.0",
     "copyfiles": "^2.4.1",
     "deepmerge": "^4.2.2",
@@ -22,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.1",
     "rollup-plugin-babel": "^4.4.0",
@@ -78,7 +81,11 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
     "@types/randomcolor": "^0.5.6",
+    "@types/react-transition-group": "^4.4.2",
     "@types/styled-components": "^5.1.12",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "classnames": "^2.3.1",
     "postcss": "^8.3.6",
     "randomcolor": "^0.6.2",
