--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-scss": "3",
+    "simplex-noise": "^3.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
