--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "build": "rollup -c rollup.config.js",
     "rollup": "yarn clean && yarn compile && yarn copy-files && yarn build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare-launch": "node .launch.js $1"
   },
   "eslintConfig": {
     "extends": [
@@ -85,6 +86,7 @@
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.4.9",
+    "@storybook/builder-webpack5": "^6.2.9",
     "@types/randomcolor": "^0.5.6",
     "@types/react-transition-group": "^4.4.2",
     "@types/styled-components": "^5.1.12",
