--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@monaco-editor/react": "^4.3.1",
     "@open-wc/building-rollup": "^1.10.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@storybook/preview-web": "^6.4.9",
@@ -16,6 +17,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.0",
     "@types/react-addons-css-transition-group": "^15.0.6",
     "@types/react-dom": "^17.0.0",
@@ -23,6 +25,7 @@
     "copyfiles": "^2.4.1",
     "deepmerge": "^4.2.2",
     "node-sass": "^5.0.0",
+    "prismjs": "^1.26.0",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -83,10 +86,10 @@
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
+    "@storybook/builder-webpack5": "^6.2.9",
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.4.9",
-    "@storybook/builder-webpack5": "^6.2.9",
     "@types/randomcolor": "^0.5.6",
     "@types/react-transition-group": "^4.4.2",
     "@types/styled-components": "^5.1.12",
