--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
   "name": "neat-treats",
-  "version": "1.1.81",
+  "version": "1.1.85",
   "description": "A component library.",
-  "main": "./lib/cjs/src/index.js",
   "module": "./lib/esm/src/index.js",
   "types": "./lib/esm/src/index.d.ts",
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@monaco-editor/react": "^4.3.1",
-    "@open-wc/building-rollup": "^1.10.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@storybook/addon-controls": "^6.4.12",
-    "@storybook/preview-web": "^6.4.9",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/prismjs": "^1.16.6",
@@ -34,11 +26,6 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.56.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-scss": "3",
     "simplex-noise": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
@@ -106,10 +93,22 @@
     "classnames": "^2.3.1",
     "postcss": "^8.3.6",
     "randomcolor": "^0.6.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "@open-wc/building-rollup": "^1.10.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@storybook/addon-controls": "^6.4.12",
+    "@storybook/preview-web": "^6.4.9",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-scss": "3",
+    "rollup": "^2.56.1"
   },
   "files": [
     "/dist",
-    "/lib"
+    "/lib/esm"
   ]
 }
