--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neat-treats",
-  "version": "1.1.85",
+  "version": "1.1.96",
   "description": "A component library.",
   "module": "./lib/esm/src/index.js",
   "types": "./lib/esm/src/index.d.ts",
@@ -11,9 +11,9 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/prismjs": "^1.16.6",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.43",
     "@types/react-addons-css-transition-group": "^15.0.6",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^17.0.14",
     "classnames": "^2.3.1",
     "copyfiles": "^2.4.1",
     "cssnano": "^5.0.16",
@@ -22,8 +22,8 @@
     "node-sass": "^5.0.0",
     "prismjs": "^1.26.0",
     "randomcolor": "^0.6.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0",
+    "react-dom": "^18.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
@@ -73,6 +73,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "@types/react": "^17.0.43",
+    "@types/eslint": "^8.4.1"
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^1.10.0",
