--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neat-treats",
-  "version": "1.1.98",
+  "version": "1.2.1",
   "description": "A component library.",
   "module": "./lib/esm/src/index.js",
   "types": "./lib/esm/src/index.d.ts",
@@ -8,7 +8,6 @@
   "dependencies": {
     "@babel/runtime": "^7.17.9",
     "@monaco-editor/react": "^4.4.2",
-    "@storybook/manager-webpack5": "^6.4.22",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
     "@types/prismjs": "^1.16.6",
@@ -80,11 +79,37 @@
     "@types/eslint": "^8.4.1"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.17.9",
+    "@monaco-editor/react": "^4.4.2",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.24",
+    "@types/prismjs": "^1.16.6",
+    "@types/react": "^18.0.5",
+    "@types/react-addons-css-transition-group": "^15.0.6",
+    "@types/react-dom": "^18.0.1",
+    "classnames": "^2.3.1",
+    "copyfiles": "^2.4.1",
+    "cssnano": "^5.1.7",
+    "deepmerge": "^4.2.2",
+    "express": "^4.17.3",
+    "node-sass": "^7.0.1",
+    "prismjs": "^1.26.0",
+    "randomcolor": "^0.6.2",
+    "react": "^18.0",
+    "react-dom": "^18.0",
+    "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
+    "rimraf": "^3.0.2",
+    "simplex-noise": "^3.0.0",
+    "styled-components": "^5.3.0",
+    "typescript": "^4.1.2",
+    "web-vitals": "^2.1.4",
     "@open-wc/building-rollup": "^2.0.1",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-controls": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
     "@storybook/addon-links": "^6.4.22",
     "@storybook/builder-webpack5": "^6.4.22",
     "@storybook/node-logger": "^6.4.22",
@@ -105,6 +130,7 @@
     "randomcolor": "^0.6.2",
     "rollup": "^2.70.2",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-scss": "3",
