--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neat-treats",
-  "version": "1.2.54",
+  "version": "1.2.56",
   "description": "A component library.",
   "module": "./lib/esm/src/index.js",
   "types": "./lib/esm/src/index.d.ts",
@@ -19,7 +19,7 @@
     "cssnano": "^5.1.7",
     "deepmerge": "^4.2.2",
     "express": "^4.17.3",
-    "node-sass": "^7.0.1",
+    "sass": "^1.50.0",
     "prismjs": "^1.26.0",
     "randomcolor": "^0.6.2",
     "react": "^18.0",
@@ -92,7 +92,7 @@
     "cssnano": "^5.1.7",
     "deepmerge": "^4.2.2",
     "express": "^4.17.3",
-    "node-sass": "^7.0.1",
+    "sass": "^1.50.0",
     "prismjs": "^1.26.0",
     "randomcolor": "^0.6.2",
     "react": "^18.0",
