--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "neat-treats",
-  "version": "1.2.59",
+  "version": "1.2.63",
   "description": "A component library.",
+  "main": "./lib/cjs/src/index.js",
   "module": "./lib/esm/src/index.js",
   "types": "./lib/esm/src/index.d.ts",
   "license": "MIT",
@@ -95,9 +96,6 @@
     "sass": "^1.50.0",
     "prismjs": "^1.26.0",
     "randomcolor": "^0.6.2",
-    "react": "^18.0",
-    "react-dom": "^18.0",
-    "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
     "simplex-noise": "^3.0.0",
