--- a/package.json
+++ b/package.json
@@ -7,31 +7,31 @@
   "types": "./lib/esm/src/index.d.ts",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
-    "@monaco-editor/react": "^4.4.2",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.24",
+    "@babel/runtime": "^7.19.0",
+    "@monaco-editor/react": "^4.4.6",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.3",
     "@types/prismjs": "^1.16.6",
-    "@types/react": "^18.0.5",
+    "@types/react": "^18.0.21",
     "@types/react-addons-css-transition-group": "^15.0.6",
     "@types/react-dom": "^18.0.1",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "copyfiles": "^2.4.1",
-    "cssnano": "^5.1.7",
+    "cssnano": "^5.1.13",
     "deepmerge": "^4.2.2",
-    "express": "^4.17.3",
-    "prismjs": "^1.26.0",
+    "express": "^4.18.2",
+    "prismjs": "^1.29.0",
     "randomcolor": "^0.6.2",
     "react": "^18.0",
     "react-dom": "^18.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
-    "sass": "^1.54.4",
-    "simplex-noise": "^3.0.0",
-    "styled-components": "^5.3.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.55.0",
+    "simplex-noise": "^4.0.0",
+    "styled-components": "^5.3.6",
+    "typescript": "^4.8.4",
+    "web-vitals": "^3.0.3"
   },
   "scripts": {
     "compile": "yarn compile:esm && yarn compile:cjs",
@@ -76,59 +76,46 @@
     ]
   },
   "resolutions": {
-    "@types/react": "^18.0.5",
+    "@types/react": "^18.0.21",
     "@types/eslint": "^8.4.1"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.17.9",
-    "@monaco-editor/react": "^4.4.2",
     "@open-wc/building-rollup": "^2.0.1",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@storybook/addon-actions": "^6.4.22",
-    "@storybook/addon-controls": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/builder-webpack5": "^6.4.22",
-    "@storybook/manager-webpack5": "^6.4.22",
-    "@storybook/node-logger": "^6.4.22",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-controls": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/node-logger": "^6.5.12",
     "@storybook/preset-create-react-app": "^4.1.0",
-    "@storybook/preview-web": "^6.4.22",
-    "@storybook/react": "^6.4.22",
+    "@storybook/preview-web": "^6.5.12",
+    "@storybook/react": "^6.5.12",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.1.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.24",
     "@types/prismjs": "^1.16.6",
     "@types/randomcolor": "^0.5.6",
-    "@types/react": "^18.0.5",
     "@types/react-addons-css-transition-group": "^15.0.6",
     "@types/react-dom": "^18.0.1",
     "@types/react-transition-group": "^4.4.2",
-    "@types/styled-components": "^5.1.25",
+    "@types/styled-components": "^5.1.26",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "classnames": "^2.3.1",
     "copyfiles": "^2.4.1",
-    "cssnano": "^5.1.7",
     "deepmerge": "^4.2.2",
-    "express": "^4.17.3",
-    "postcss": "^8.3.6",
-    "prismjs": "^1.26.0",
+    "postcss": "^8.4.17",
     "randomcolor": "^0.6.2",
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.70.2",
+    "rollup": "^2.79.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-scss": "3",
-    "simplex-noise": "^3.0.0",
-    "styled-components": "^5.3.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^2.1.4"
+    "rollup-plugin-scss": "3"
   },
   "files": [
     "/dist",
